--- a/generate-dataset-json.ipynb
+++ b/generate-dataset-json.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -17,7 +17,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(['background',\n",
+       "  'pizza',\n",
+       "  'drink',\n",
+       "  'hamburger',\n",
+       "  'fried chicken',\n",
+       "  'doughnut',\n",
+       "  'noodles',\n",
+       "  'ice cream',\n",
+       "  'hotdog'],\n",
+       " 9)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "labels = [      \"background\",\n",
+    "                \"pizza\",\n",
+    "                \"drink\",\n",
+    "                \"hamburger\",\n",
+    "                \"fried chicken\",\n",
+    "                \"doughnut\",\n",
+    "                \"noodles\",\n",
+    "                \"ice cream\",\n",
+    "                \"hotdog\"]\n",
+    "labels, len(labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -40,93 +80,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['background', 'skin', 'hair', 'dress', 'glasses', 'jacket', 'skirt']"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "labels = [      \"background\",\n",
-    "                \"skin\",\n",
-    "                \"hair\",\n",
-    "                \"dress\",\n",
-    "                \"glasses\",\n",
-    "                \"jacket\",\n",
-    "                \"skirt\"]\n",
-    "labels"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['data/images/1.jpg', 'data/images/2.jpg', 'data/images/555.png']"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "imageURLs_path = 'data/images/'\n",
-    "imageURLs = read_labeled_image_list(imageURLs_path)\n",
-    "imageURLs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {
-    "collapsed": false,
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "File exists : data/annotations/1.png\n",
-      "File exists : data/annotations/2.png\n"
-     ]
-    }
-   ],
-   "source": [
-    "annotationURLs_path = 'data/annotations/'\n",
-    "place_holder = 'placehodler.png'\n",
-    "\n",
-    "for im_path in imageURLs:\n",
-    "    im_name = im_path.split('/')[-1].split('.')[0]\n",
-    "    src = place_holder\n",
-    "    dst = annotationURLs_path + im_name + '.png'\n",
-    "    if not os.path.isfile(dst): \n",
-    "        copyfile(src, dst)\n",
-    "    else: \n",
-    "        print(\"File exists : \" + dst)\n",
-    "    \n",
-    "\n",
-    "# # copyfile( place_holder , annotationURLs_path+place_holder)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
    "metadata": {
     "collapsed": false
@@ -135,7 +88,18 @@
     {
      "data": {
       "text/plain": [
-       "'{\"imageURLs\": \"data/images/\", \"labels\": [\"background\", \"skin\", \"hair\", \"dress\", \"glasses\", \"jacket\", \"skirt\"], \"annotationURLs\": \"data/annotations/\"}'"
+       "['data/images/1.jpg',\n",
+       " 'data/images/2.jpg',\n",
+       " 'data/images/3.jpg',\n",
+       " 'data/images/ADE_train_00000002.jpg',\n",
+       " 'data/images/ADE_train_00000003.jpg',\n",
+       " 'data/images/ADE_train_00000004.jpg',\n",
+       " 'data/images/ADE_train_00000005.jpg',\n",
+       " 'data/images/ADE_train_00000006.jpg',\n",
+       " 'data/images/ADE_train_00000007.jpg',\n",
+       " 'data/images/ADE_train_00000008.jpg',\n",
+       " 'data/images/ADE_train_00000009.jpg',\n",
+       " 'data/images/ADE_train_00000010.jpg']"
       ]
      },
      "execution_count": 6,
@@ -144,11 +108,73 @@
     }
    ],
    "source": [
-    "r = {'labels': labels,\n",
+    "imageURLs_path = 'data/images/'\n",
+    "imageURLs = read_labeled_image_list(imageURLs_path)\n",
+    "imageURLs\n",
+    "\n",
+    "\n",
+    "# place_holder = 'placehodler.png'\n",
+    "# imageURLs = []\n",
+    "# for im_path in imageURLs:\n",
+    "#     im_name = im_path.split('/')[-1].split('.')[0]\n",
+    "#     src = place_holder\n",
+    "#     dst = annotationURLs_path + im_name + '.png'\n",
+    "#     if not os.path.isfile(dst): \n",
+    "#         copyfile(src, dst)\n",
+    "#     else: \n",
+    "#         print(\"File exists : \" + dst)\n",
+    "#     annotationURLs.append(dst)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "annotationURLs_path = 'data/annotations/'\n",
+    "place_holder = 'placehodler.png'\n",
+    "annotationURLs = []\n",
+    "for im_path in imageURLs:\n",
+    "    im_name = im_path.split('/')[-1].split('.')[0]\n",
+    "    src = place_holder\n",
+    "    dst = annotationURLs_path + im_name + '.png'\n",
+    "#     if not os.path.isfile(dst): \n",
+    "#         copyfile(src, dst)\n",
+    "#     else: \n",
+    "#         print(\"File exists : \" + dst)\n",
+    "    annotationURLs.append(dst)\n",
+    "    \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"imageURLs\": [\"data/images/1.jpg\", \"data/images/2.jpg\", \"data/images/3.jpg\", \"data/images/ADE_train_00000002.jpg\", \"data/images/ADE_train_00000003.jpg\", \"data/images/ADE_train_00000004.jpg\", \"data/images/ADE_train_00000005.jpg\", \"data/images/ADE_train_00000006.jpg\", \"data/images/ADE_train_00000007.jpg\", \"data/images/ADE_train_00000008.jpg\", \"data/images/ADE_train_00000009.jpg\", \"data/images/ADE_train_00000010.jpg\"], \"annotationURLs\": [\"data/annotations/1.png\", \"data/annotations/2.png\", \"data/annotations/3.png\", \"data/annotations/ADE_train_00000002.png\", \"data/annotations/ADE_train_00000003.png\", \"data/annotations/ADE_train_00000004.png\", \"data/annotations/ADE_train_00000005.png\", \"data/annotations/ADE_train_00000006.png\", \"data/annotations/ADE_train_00000007.png\", \"data/annotations/ADE_train_00000008.png\", \"data/annotations/ADE_train_00000009.png\", \"data/annotations/ADE_train_00000010.png\"], \"labels\": [\"background\", \"pizza\", \"drink\", \"hamburger\", \"fried chicken\", \"doughnut\", \"noodles\", \"ice cream\", \"hotdog\"]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = {'labels': labels,\n",
     "     'imageURLs': imageURLs,\n",
-    "     'annotationURLs': annotationURLs_path}\n",
-    "r = json.dumps(r)\n",
-    "r"
+    "     'annotationURLs': annotationURLs}\n",
+    "\n",
+    "with open('data/example.json', 'w') as f:\n",
+    "    print(json.dumps(data))\n",
+    "    json.dump(data, f, ensure_ascii=False)"
    ]
   },
   {
